[project]
name = "akkermansia-supplement-comparative-analysis"
version = "0.1.0"
description = "Akkermansia supplement comparative analysis and quality reports"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "openpyxl>=3.0.0",
    "reportlab>=4.0.0",
    "matplotlib>=3.5.0",
    "python-docx>=1.0.0",
]

[tool.uv]
package = false
